added two new item-options for RSS filter rules "Accept" and "Options": option "rageid" generates duplicate key using custom rageid and season/episode numbers; option "series" generates duplicate key using custom series name (any unique string) and season/episode numbers
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@857 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -1474,6 +1474,8 @@
 				<em>All</em> - download all duplicates regardless of scores;
 				<em>Force</em> - treat item as unique, ignore all duplicate checks.
 				For <em>Score</em> and <em>All</em> item is skipped if a duplicate marked as "good" exists in history.</td></tr>
+		<tr><td>rageid</td><td>generate duplicate key using this rageid (integer number) and season/episode numbers;</td></tr>
+		<tr><td>series</td><td>generate duplicate key using series identifier (any unique string) and season/episode numbers.</td></tr>
 		</tbody>
 		</table>
 		</p>
