fixed wrong size of progress wheel during adding of URL in add dialog
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@926 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -1827,7 +1827,7 @@
 			<fieldset>
 
 				<div class="control-group">
-					<label class="control-label" for="AddDialog_URL" id="AddDialog_URLLabel"><i class="icon-remove"></i><img class="hide" src="img/transmit-file.gif"> Add from URL</label>
+					<label class="control-label" for="AddDialog_URL" id="AddDialog_URLLabel"><i class="icon-remove"></i><img class="hide" src="img/transmit-file.gif" width="16px" height="16px"> Add from URL</label>
 					<div class="controls">
 						<input type="text" class="input-xlarge" id="AddDialog_URL" />
 					</div>
